# TIX-DAO

./: .env.example  .env.local.example  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  demo-record.sh  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  HACKATHON.md  PRIVACY.md  ROADMAP.md  SECURITY.md  SECURITY_REVIEW.md  TERMS.md
public/: robots.txt
src/app/: NotFoundClient.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/create/: layout.tsx  page.tsx
src/app/faucet/: layout.tsx  page.tsx
src/app/finance/: layout.tsx  page.tsx
src/app/lock/: layout.tsx  page.tsx
src/app/proposals/: layout.tsx  page.tsx
src/components/: Footer.tsx  Navbar.tsx  ProposalCard.tsx  WalletProvider.tsx  WalletWrapper.tsx
src/lib/: governance.ts  governanceActions.ts  tick_escrow_idl.json
tick-escrow/: .gitignore  Anchor.toml  Cargo.toml
tick-escrow/programs/tick-escrow/: Cargo.toml
tick-escrow/programs/tick-escrow/src/: lib.rs
