[package]
name = "tick-escrow"
version = "0.1.0"
edition = "2021"

[lib]
name = "tick_escrow"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.32.1", features = ["token", "associated_token", "token_2022"], default-features = false }
